# sources

sources/ru.mangalib/: Cargo.toml
sources/ru.mangalib/res/: filters.json  settings.json  source.json
sources/ru.mangalib/src/: lib.rs
templates/libgroup/: Cargo.toml
templates/libgroup/src/: imp.rs  lib.rs  settings.rs
templates/libgroup/src/auth/: mod.rs  test.rs
templates/libgroup/src/cdn/: mod.rs
templates/libgroup/src/endpoints/: mod.rs  test.rs
templates/libgroup/src/filters/: mod.rs  test.rs
templates/libgroup/src/models/: chapter.rs  common.rs  manga.rs  responses.rs
